add:message in header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </ul>
           </nav>
         </div>
+        <p class="thx-message">Thanks for providing a place to practice:)</p>
       </div>
     </header>
   </body>
